--- a/.github/workflows/build-with-maven.yml
+++ b/.github/workflows/build-with-maven.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Maven Action
-        uses: s4u/setup-maven-action@latest
+        uses: s4u/setup-maven-action@v1.14.0
         with:
           java-version: '21.0.2'
           maven-version: '3.9.7'
