--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: [frankdelporte,codewriterbv]
+github: [fdelporte,codewriterbv]
 buy_me_a_coffee: frankdelporte
 polar: codewriter-bv
 
